@@ -1,0 +1,16 @@
+<gconfschemafile>
+  <schemalist>
+    <schema>
+      <key>/schemas/apps/buoh/show_toolbar</key>
+      <applyto>/apps/buoh/show_toolbar</applyto>
+      <owner>buoh</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Show toolbar by default</short>
+        <long>Toolbar is the top bar that contains navigation and zoom controls.  Two boolean options, true makes toolbar visible by default while false makes toolbar not visible by default.</long>
+      </locale>
+    </schema>
+  </schemalist>
+</gconfschemafile>
+
